# JarvisX

./: .gitignore  AVATAR_IMPLEMENTATION_SUMMARY.md  AVATAR_SETUP_GUIDE.md  CELEBRITY_AVATAR_GUIDE.md  COMPLETE_PROJECT_OVERVIEW.md  COMPLETE_SYSTEM_OVERVIEW.md  CONTRIBUTING.md  DOCKER_QUICKSTART.md  FINAL_STATUS_REPORT.md  HUMAN_LIKE_FEATURES.md  IRON_MAN_JARVIS_ACHIEVED.md  JOI_AVATAR_COMPLETE.md  JOI_AVATAR_READY.md  LICENSE  MASTER_IMPLEMENTATION_PLAN.md  NATIVE_CROSS_PLATFORM_ARCHITECTURE.md  NATIVE_TRANSFORMATION_COMPLETE.md  PRODUCTION_READINESS.md  PROJECT_SUMMARY.md  README.md  README_CELEBRITY_AVATAR.md  README_COMPLETE.md  REALISTIC_AVATAR_UPGRADE_COMPLETE.md  RELEASE_NOTES.md  RELEASE_NOTES_UI.md  SECURITY.md  SELF_TRAINING_CAPABILITIES.md  SELF_TRAINING_COMPLETE.md  SYSTEM_AUDIT_COMPLETE.md  UI_FEATURES.md  WEEK1_SCREEN_INTELLIGENCE_COMPLETE.md  WEEK2_ENHANCED_SYSTEM_CONTROL_COMPLETE.md  WEEK3_ADVANCED_REASONING_ENGINE_COMPLETE.md  WEEK4_PRODUCTION_DESKTOP_UI_COMPLETE.md  WEEK5_MOBILE_APP_COMPLETION_COMPLETE.md  WEEK6_INFRASTRUCTURE_SCALING_COMPLETE.md  WEEK7_ADVANCED_FEATURES_COMPLETE.md  WHATS_WORKING_NOW.md  YOUR_JOI_AVATAR_IS_LIVE.md  demo-server.js  (+10 more)
.github/workflows/: build-desktop.yml  build-mobile.yml  ci.yml
apps/desktop/: joi-avatar-demo.html  package.json  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  screen.rs  system.rs  voice.rs
scripts/: demo-human-like.sh  demo-orchestrator.sh  demo-self-training.sh  demo-stt.sh  demo-whatsapp.sh  deploy-human-like.sh  deploy-production.sh
(+176 files in other folders)
